# chill

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: core-tests.yml
chill/: __init__.py  constants.py  core.py
docs/: README-ja.md
notebook/: simple_example.ipynb
src/: lib.rs
tests/: test_chill_core.py  test_simple_sim.py
