[metadata]
name = chill
version = 0.2.0
description = Calculator of Heat Iterative Linear Logic
long_description = file: README.md
long_description_content_type = text/markdown
author = Keita Mizukoshi
license = MIT

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    tqdm
    thermo
    networkx

[options.packages.find]
where = chill

[options.extras_require]
dev =
    pytest
    numpy
    matplotlib
    tqdm
    thermo
    networkx

[tool:maturin]
bindings = pyo3

